# Crowdfunding-Platform

./: .dockerignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  instructions.txt  logging_config.py  main.py  makefile  my_instructions.txt  pyproject.toml  report.htm  report.html  requirements.txt  run_dev.py  update_readme_stats.py
.github/workflows/: cd.yml  ci.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu
migrations/: env.py
migrations/versions/: 9513bbb8749b_new_migration.py  c8405a0d4646_new_migration.py  dafb30ae8873_new_migrations.py  e7072921ecc3_new_migration.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
src/config/: redis_config.py  settings.py
src/core/: __init__.py  templates.py
src/database/: models.py  postgres.py  redis_client.py
src/dependencies/: rbac.py
src/endpoints/: auth.py  comments.py  likes.py  payments.py  projects.py  users.py  webinars.py  websocket.py
src/repository/: __init__.py  base.py  comments_repository.py  donations_repository.py  likes_repository.py  news_media_repository.py  posts_repository.py  project_media_repository.py  project_news_repository.py  projects_repository.py  transactions_repository.py  user_repository.py  wallets_repository.py  (+1 more)
tests/: check_webinar_integration.py  conftest.py  debug_routes.py  debug_user.py  test_auth_additional.py  test_auth_coverage.py  test_files_for_static.py  test_mock_diagnostic.py  test_static.py  test_table_creation.py
(+84 files in other folders)
