[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[project.scripts]
test-stats = "update_test_stats:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --cov-report=html --cov-report=term-missing --html=report.html --self-contained-html"
testpaths = ["tests"]