[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[project.scripts]
test-stats = "update_test_stats:main"

testpaths = ["tests"]